# iran-national-id

./: .gitignore  LICENSE  README.fa.md  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: quick_demo.py
src/iran_national_id/: __init__.py  codes.py  codes.py.bak  validator.py
src/iran_national_id/data/: iran_codes.json
tests/: test_validator.py
