[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iran-national-id"
version = "0.1.0"
description = "Iran national ID validator and issuance location lookup"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Okhtay", email = "example@example.com" }]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iran_national_id = ["data/*.json"]

# اختیاری ولی خوبه:
[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
